syntax = "proto3";
package ultimate.service.invite;

service Example {
	rpc Call(Request) returns (Response) {}
	rpc Stream(StreamingRequest) returns (stream StreamingResponse) {}
	rpc PingPong(stream Ping) returns (stream Pong) {}
}

message Message {
	string say = 1;
}

message Request {
	string name = 1;
}

message Response {
	string msg = 1;
}

message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}

message MUW_CheckInvite {
    int64 newbie_id = 1;
    int64 inviter_id = 2;
}

message MWU_CheckInviteResult {
    int64 newbie_id = 1;
    int64 inviter_id = 2;
    int32 error_code = 3;
}

message MWU_AddInvite {
    int64 newbie_id = 1;
    int64 inviter_id = 2;
}

message MUW_AddInviteResult {
    int64 newbie_id = 1;
    int64 inviter_id = 2;
    int32 error_code = 3;
}

message MWU_InviteRecharge {
    int64 newbie_id = 1;
    string newbie_name = 2;
    int64 inviter_id = 3;
    int32 diamond_gift = 4;
}

message MUW_InviteRecharge {
    int64 newbie_id = 1;
    string newbie_name = 2;
    int64 inviter_id = 3;
    int32 diamond_gift = 4;
}
